# gitrank

./: .cta.json  .gitignore  DEVPOST.md  README.md  components.json  package.json  pnpm-lock.yaml  prisma.config.ts  tsconfig.json  vercel.json  vite.config.ts  wrangler.jsonc
ml/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  ruff.toml
ml/app/src/: config.py
ml/legacy/: pyproject.toml
ml/legacy/scoring/: test_algo.py
ml/legacy/src/v0_7/models/regression/: pipeline.py
ml/scoring/: algo.py  test_algo.py  tiers.py  types.py
ml/src/: config.py  forest.py  github.py  ocsvm.py  regression.py  run.py
ml/src/artefacts/: latest.pkl  regression.pkl
ml/src/v0_6/: github.py
ml/src/v0_7/: main.py  run.py
ml/src/v0_7/core/: __init__.py  config.py  data.py  graphql.py  regression.py  utils.py
ml/src/v0_7/features/: commit_score.py  performance.py
ml/src/v0_7/metrics/: performance.py
ml/src/v0_7/models/regression/: data.py  pipeline.py
ml/src/v0_7/unstable/github/: commits.py
ml/src/v0_7/unstable/rank/: mmr.py
prisma/: schema.prisma  seed.ts
prisma/migrations/20260314154144_init/: migration.sql
public/: manifest.json
src/: db.ts  routeTree.gen.ts  styles.css
src/components/: CommitCloud.tsx  Compare.tsx  ContributionGraph.tsx  Faq.tsx  Footer.tsx  Header.tsx  LeaderboardTable.tsx  RankDistributionChart.tsx  SearchUser.tsx  SeasonStats.tsx  ThemeToggle.tsx  TopRanked.tsx  UserRank.tsx  UserStats.tsx
src/lib/: algo.ts  utils.ts
src/routes/: __root.tsx  dashboard.tsx  index.tsx
src/schemas/: index.ts  leaderboard.ts  user.ts
(+40 files in other folders)
