[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-commits"
version = "1.0.0"
requires-python = ">=3.12, <3.14"
authors = [{ name = "Andrew", email = "hello.andrew.yan@outlook.com" }]

dependencies = [
  "optimum[onnxruntime]",
  "transformers",
  "pandas==3.0.1",
  "faiss-cpu==1.13.2",
  "rich==14.3.3",
  "python-dotenv==1.2.2",
  "requests-toolbelt==1.0.0",
  "gql==4.0.0",
  "polars==1.39.0",
  "fastapi==0.135.1",
  "uvicorn[standard]==0.37.0",
]